# Firmin

./: pyproject.toml
firmin/: audio_service.proto  audio_service_pb2.py  audio_service_pb2_grpc.py  grpc_client.py  grpc_server.py  socket_client.py  socket_server.py
